<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sharedUserLabel">Android Core Apps</string>
    <string name="contactsList">Contacts</string>
    <string name="launcherDialer">Phone</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_search">Search</string>
    <string name="name">Name</string>
    <string name="numbers">Phone number</string>
    <string name="store_location">Please select store location</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_callNumber">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="menu_editContact">Edit contact</string>
    <string name="menu_deleteContact">Delete contact</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_sendEmail">Send email</string>
    <string name="menu_viewAddress">Map address</string>
    <string name="menu_makeDefaultNumber">Make default number</string>
    <string name="menu_makeDefaultEmail">Make default email</string>
    <string name="menu_splitAggregate">Separate</string>
    <string name="contactsSplitMessage">Contacts separated</string>
    <string name="splitConfirmation_title">Separate Contact</string>
    <string name="splitConfirmation">Are you sure you want to separate this single contact
        into multiple contacts: one for each set of contact information that was joined into it?
    </string>
    <string name="menu_joinAggregate">Join</string>
    <string name="menu_showSources">Show sources</string>
    <string name="menu_hideSources">Hide sources</string>
    <string name="titleJoinAggregate">Join contact</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Select the contact you want to join with <xliff:g id="name">%s</xliff:g>.</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="menu_contactOptions">Options</string>
    <string name="contactOptionsTitle">Options</string>
    <string name="deleteConfirmation_title">Delete</string>
    <string name="readOnlyContactWarning">You cannot delete contacts from read-only accounts, but you can hide them in your contacts lists.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts lists, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts.</string>
    <string name="deleteConfirmation">This contact will be deleted.</string>
    <string name="menu_done">Save</string>
    <string name="menu_doNotSave">Revert</string>
    <string name="location_sim">     SIM Contact</string>
    <string name="location_sim1">     SIM1 Contact</string>
    <string name="location_sim2">     SIM2 Contact</string>
    <string name="show_phone_contacts_header">Phone Contacts</string>
    <string name="show_phone_contacts_body">Display contacts saved in Phone</string>
    <string name="show_sims_contacts_header">SIMs Contacts</string>
    <string name="show_sims_contacts_body">Display contacts saved in SIMs</string>
    <string name="show_sim1_contacts_header">SIM1 Contacts</string>
    <string name="show_sim1_contacts_body">Display contacts saved in SIM1</string>
    <string name="show_sim2_contacts_header">SIM2 Contacts</string>
    <string name="show_sim2_contacts_body">Display contacts saved in SIM2</string>
    <string name="insert_error">Insert SIM contact error.</string>
    <string name="delete_error">Delete SIM contact failed.</string>
    <string name="batch_delete_error">"Partial or all SIM contact can't be deleted, please check setting."</string>
    <string name="cannot_insert_null_number">Cannot save contact whose number is empty.</string>
    <string name="AirPlane_mode_on">Cannot save contact when Airplane mode is on.</string>
    <string name="AirPlane_mode_on_edit">Cannot edit contact when Airplane mode is on.</string>
    <string name="AirPlane_mode_on_delete">Cannot delete contact when airplane mode is on.</string>
    <string name="FDNEnabled">Cannot save contact when FDN Enabled.</string>
    <string name="sim_invalid">Cannot save contact when SIM card is invalid.</string>
    <string name="FDNEnabled_delete">Cannot delete contact when FDN Enabled.</string>
    <string name="sim_invalid_delete">Cannot delete contact when SIM card is invalid.</string>
    <string name="generic_failure">Generic Failure.</string>
    <string name="number_too_long">"Number is too long."</string>
    <string name="name_too_long">"Name is too long."</string>
    <string name="storage_full">Storage is full.</string>
    <string name="set_success">The primary photo set successfully.</string>
    <string name="remove_success">Photo removed successfully.</string>
    <string name="sim_invalid_number">Cannot save invalid number.</string>
    <string name="editContact_title_edit">Edit contact</string>
    <string name="editContact_title_insert">New contact</string>
    <string name="menu_addItem">More info</string>
    <string name="label_phonetic_name">Phonetic</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="ghostData_name">First and Last</string>
    <string name="ghostData_phonetic_name">Phonetic name</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_phone">Phone number</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">The contact does not exist.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="selectLabel">Select label</string>
    <string name="selectStorelocation">Contact Type</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Postal address</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText">No pictures are available on the phone.</string>
    <string name="attachToContact">Contact icon</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="menu_displayGroup">Display options</string>
    <string name="displayGroups">Display options</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="send_to_voicemail_view">Calls are sent directly to voicemail.</string>
    <string name="default_ringtone">Default</string>
    <string name="changePicture">Change icon</string>
    <string name="removePicture">Remove icon</string>
    <string name="noContacts">No contacts.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
    <string name="noFavorites">No favorites.</string>
    <string name="select_group_title">Groups</string>
    <string name="groupEmpty">Your \"<xliff:g id="groupName">%s</xliff:g>\" group is empty.</string>
    <string name="showAllGroups">All contacts</string>
    <string name="showFilterPhones">Only contacts with phones</string>
    <string name="showFilterPhonesDescrip">Only display contacts that have phone numbers</string>
    <string name="headerContactGroups">Choose contacts to display</string>
    <plurals name="groupDescrip">
        <item quantity="other"><xliff:g id="count">%0$d</xliff:g> contacts</item>
    </plurals>
    <plurals name="groupDescripPhones">
        <item quantity="other"><xliff:g id="count">%1$d</xliff:g> contacts, <xliff:g id="countWithPhones">%2$d</xliff:g> with phones</item>
    </plurals>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactCreatedToast">Contact created.</string>
    <string name="contactSavedToast">Contact saved.</string>
    <string name="contactSavedErrorToast">Error, unable to save contact changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">Displaying 1 contact with phone number</item>
        <item quantity="other">Displaying <xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No visible contacts with phone numbers</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">Displaying 1 contact</item>
        <item quantity="other">Displaying <xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No visible contacts</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">Found 1 contact</item>
        <item quantity="other">Found <xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listFoundAllContactsZero">Contact not found</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="liveFolderAll">All contacts</string>
    <string name="liveFolderFavorites">Starred contacts</string>
    <string name="liveFolderPhone">Contacts with phone numbers</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_import_export">Import/Export</string>
    <string name="email">Email</string>
	<string name="import_from_sns">Import from SNS</string>
    <string name="menu_delete">"Delete contact"</string>
    <string name="name_of_additional_numbers">Fix number</string>
    <string name="groups">Groups</string>
    <string name="mobile_numbers">Phone number</string>
    <string name="menu_speed_dial">Speed Dial</string>
<string name="hello">吴翔</string>
    <string name="contact_phone_numbler">13528750390</string>
    <string name="contact_phone_contact_people">联系人:</string>
    <string name="contact_phone_contact_phone">电话号码:</string>
    <string name="contact_phone_contact_btn_ok">提交</string>
    <string name="contact_phone_contact_btn_canel">取消</string>
</resources>